# NorGovPCC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/subtitled_videos_to_asr_dataset/: log_config.py  types.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_extraction/: __init__.py  __main__.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_processing/: __init__.py  __main__.py  utils.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_processing/align_subtitles/: __init__.py  __main__.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_processing/compress_audio/: __init__.py  __main__.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_processing/compute_transcribed_difference/: __init__.py  __main__.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_processing/language_identification/: __init__.py  __main__.py  huggingface_identification.py  utils.py  whisper_identification.py
src/subtitled_videos_to_asr_dataset/audio_and_subtitle_processing/transcribe_audio/: __init__.py  __main__.py
src/subtitled_videos_to_asr_dataset/dataset_preparation/create_huggingface_dataset/: __init__.py  __main__.py  data_card.md.j2
src/subtitled_videos_to_asr_dataset/dataset_preparation/prepare_raw_dataset/: __init__.py  __main__.py
tests/audio_and_subtitle_processing/compute_transcribed_difference/: test_calculate_subtitle_difference.py  test_compute_transcribed_difference.py
tests/dataset_preparation/: test_merge_subtitles_upto_n_seconds.py  test_remove_unwanted_subtitles.py
