[project]
name = "subtitled-videos-to-asr-dataset"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marie Roald", email = "marie.roald@nb.no"},
    {name = "Tita Enstad", email = "tita.enstad@nb.no"},
    {name = "The Norwegian Language Bank at the National Library of Norway", email = "sprakbanken@nb.no"}
]
dependencies = [
    # Utilities
    "typing-extensions>=4.9.0",
    "tqdm>=4.66.1",
    # Audio and subtitle processing
    "whisperx @ git+https://github.com/m-bain/whisperX.git@f2da2f858e99e4211fe4f64b5f2938b007827e17",
    "levenshtein>=0.25.0",
    "resampy>=0.4.2",
    "openai-whisper>=20231117",
    "srt>=3.5.3",
    "vtt-to-srt3>=0.2.0.1",
    # Analysis
    "pandas>=2.2.0",
    "jupyter>=1.0.0",
    "jupytext>=1.16.1",
    "plotly>=5.18.0",
    "ipywidgets>=8.1.2",
    "openpyxl>=3.1.2",
    "m3u8>=4.1.0",
    "datasets>=2.18.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26,<2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/Sprakbanken/NorGovPCC"
Developer = "https://www.nb.no/sprakbanken/en/sprakbanken/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.optional-dependencies]
dev = [
    "ruff==0.1.15",
    "pytest>=8.0.1",
    "pandas-stubs>=2.1.4.231227",
    "types-beautifulsoup4>=4.12.0.20240106",
    "types-tqdm>=4.66.0.20240106",
    "hypothesis[cli]>=6.97.3",
    "mypy>=1.8.0",
]

[tool.ruff]
select = ["I"]
line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "src",
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
